fixing href and overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
- 
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   
